--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@ svg{
     --font-main : 'Wix Madefor Display', sans-serif;
     --font-nav: 'Lato', sans-serif , 'Nunito Sans', sans-serif;
     --font-h1:'Wix Madefor Display', sans-serif;
-    --size-nav: 10vw;
+    --size-nav: 1.8vw;
     --font-h2: 'Wix Madefor Display', sans-serif;
     --font-hs: 'Wix Madefor Display', sans-serif;
     
@@ -63,75 +63,79 @@ svg{
 
 html{
     scroll-behavior: smooth;
+    scroll-padding: 10rem;
 }
+
+
 
 /*HEADER NAV*/
 .Header{
-    max-width:  100%;
-    min-height: 20%;
+    width:  100%;
     background-color: white;
+    
 }
 
 .Header-wrapper{
-    width: 95%;
+    width: 100%;
 /*    background-color: aqua;*/
     
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
+    flex-flow: row wrap;
+    justify-content: space-between;
     align-items: center;
-    margin: auto; 
-    padding: .9rem;
+    margin: auto;
+    padding: 1.9rem;
+    
+}
+
+
+.Header-h1{
+    width: 20%;
+/*    background-color: blue;*/
+    padding: 1rem;
 }
 
 .Header-nav{
-    width: 90%;
+    
 /*    background-color: dimgray;*/
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.Nav-img{
-    width: 23%;
-}
-.Nav-ul{
-    width: 90%;
-/*    background-color: chartreuse;*/
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: flex-start;
    
 }
 
-.Nav-li{
-     width: 100%;
-/*    background-color: darkmagenta;*/
-    text-align: center;
-    margin: auto;
+.Header-ul{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+    grid-gap: 4rem;
+    
+}
+
+.Header-li{
     font-family: var(--font-nav);
     color: var(--color-nav);
-    font-size: 1.5vw;
-    transform: scale(1);
-    transition: transform 2s;
+    font-size: var(--size-nav);
+    
+    
     
 }
 
-.Nav-li:hover{
-    transform: scale(1.5);
+.Header-li:hover{
+    transform: scale(1.3);
     color: #1f333d;
+    transition: 2s;
     
 }
-
-.Nav-svg{
-   width: 1.5rem;
-/*   background-color: coral;*/
+.Header-button{
+    width: 2rem;
     
-display: none;
-
+    display: none;
 }
+
+.Header-svg{
+ 
+}
+
+
 
 /*Main*/
 
@@ -151,98 +155,144 @@ display: none;
     
     position: relative;
 }
+/*
 .Main-img{
     width: 100%;
-/*    background-color: cornsilk;*/
+    background-color: cornsilk;
 }
-.Mains-img{
-    width: 100%;
-    background-color: darksalmon;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
+*/
+
+/*
 
 .Inicio-intro{
-    width: 80%;
-    min-height: 19.5rem;
+    max-width: 80vw;
+    min-height: 40vh;
     background-color: white;
     border-radius: 15px;
     
     position: absolute;
     top: 20.5rem;
     left: 6.5rem;
+    text-align: center
     
 }
+*/
 
-.First-p{
-    width: 70%;
-/*    background-color: aquamarine;*/
+.Main-img {
+    width: 100%;
+    /* background-color: cornsilk; */
+}
+
+.Inicio-intro {
+    max-width: 80vw;
+    min-height: 40vh;
+    background-color: white;
+    border-radius: 15px;
     
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: flex-start;
-    margin: auto;
+    position: absolute; /* Mantenemos position: absolute para el modo normal */
+    top: 50%; /* Centramos verticalmente utilizando top: 50% */
+    left: 50%; /* Centramos horizontalmente utilizando left: 50% */
+    transform: translate(-50%, -50%); /* Ajuste para centrado exacto */
+    text-align: center;
+    padding: 1rem; /* Agregamos un poco de espacio interno */
+}
+
+.First-p {
+    width: 70vw;
+    /* background-color: aquamarine; */
     font-family: var(--font-main);
     font-size: 1.3rem;
     color: var(--color-hs);
     padding: .8rem;
     font-weight: 200;
     word-spacing: .3rem;
-    
+    margin: auto;
 }
-.Inicio-h1{
-    width: 80%;
-/*    background-color: blueviolet;*/
+
+.Inicio-h1 {
+    width: 80vw;
+    /* background-color: blueviolet; */
     font-family: var(--font-h1);
     font-size: 3rem;
     font-weight: 800;
     color: var(--color-h1);
     word-spacing: 1rem;
-    
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
     margin: auto;
     padding: 1rem;
 }
 
+
 .Formulario-inicio{
-    display: none
+/*    display: none;*/
+    position: relative;
+   
 }
 
-form{
-    width: 20rem;
-    min-height: 18rem;
-    margin: 0 auto;
+.Form-form{
+    width: 50vw;
+    height: 60vh;
+    margin: -20rem  auto;
     background-color: #d8e5ed;
-    padding: .5rem;
+    padding: 2rem 4em;
     color: #878791;
     font-family: var(--font-main);
     border-radius: 0.60rem;
+    position: absolute;
+    
+    left: 20vw;
+    
     
 }
 
-.Form-input{
+.Form-input , placeholder{
+    width: 15vw;
+    height: 5vh;
     border-bottom: solid 1px #444452;
     outline: 0;
+/*    background-color: blueviolet;*/
 }
 
-.Parrafo-p , checkbox , label{
+.Parrafo-p{
+    width: 30%;
     color: #28282e;
+/*    background-color: burlywood;*/
+    text-align: start;
+    font-size: 3vh;
+}
+label , checkbox{
+/*    background-color: brown;*/
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    
+    
 }
 
 .Input-submit{
     color: #28282e;
     background-color: #9191a3;
-    padding: .8rem;
+    padding: .9rem;
     border-radius: .4rem;
 }
 
-.Formulario-inicio.IsActive{
-    display: block
+.Formulario-inicio.isActive{
+    display: block;
+    
+}
+
+.Close-svg{
+    width: 3vw;
+    position: absolute;
+    top: -310px;
+    left: 80%;
+    padding: .2rem;
+    fill: var(--bottom-color);
+    
+}
+
+.Close-svg.isActive , .Formulario-inicio{
+    display: none;
 }
 
 .Formulario-button{
@@ -250,7 +300,7 @@ form{
     padding: 2rem;
     margin: auto;
     border-radius: .9rem;
-    background: #57577a;
+
     box-shadow: inset 9px -9px 12px #3e3e57,
             inset -9px 9px 12px #70709d;
     background-color: var(--bottom-color);
@@ -274,18 +324,19 @@ form{
 .Grid-article{
     width: 99%;
     background-color: #ebebf2;
-    min-height: 21.875;
+    
     
     display: grid;
     grid-template-columns: repeat(3 , 1fr);
     grid-gap: 1rem;
-    padding: 2rem;
+    padding: 4rem;
     border-radius: .5rem;
 }
 .Mision-wrapper{
 /*    background-color: pink;*/
-    
+
 }
+
 
 .Mision-h2{
     background-color: #ebebf2;
@@ -293,6 +344,7 @@ form{
     font-size: 1.5rem;
     color: var(--color-nav);
     border-bottom: 3px solid var(--color-nav);
+    transition: transform .3s ease;
     
 }
 
@@ -408,16 +460,15 @@ form{
 /*    background-color: antiquewhite;*/
     padding: 2rem;
     text-align: center;
-    height: 40vh;
     margin:  auto;
     
     
     
 }
 .Slider-opinion{
-    max-width: 80vw;
-/*   background-color: aquamarine;*/
-    max-height: 80vh;
+    width: 50vw;
+   background-color: aquamarine;
+    height: 40vh;
     position: absolute;
     opacity: 0;
     transition: all 2s ease;
@@ -425,7 +476,7 @@ form{
     border: 1px solid #c4c4c4;
     padding: 2rem;
     border-radius: .9rem;
-    top:0;
+    top: 2.5vw;
     
     
 }
@@ -434,18 +485,22 @@ form{
 }
 .Slider-static{
     position: static;
+    
 }
 
 .Nombre-h2{
     font-family: var(--font-h2);
     color: var(--color-h2);
     font-size: 1.5rem;
+    background-color: cadetblue;
     
 }
 .Opinion-p{
     font-family: var(--font-nav);
     color: var(--color-hs);
     font-size: 1.2rem;
+    background-color: brown;
+    
     
 }
 .Slider-arrow{
@@ -464,29 +519,8 @@ form{
 .Slider-prev{
     left: 5%;
 }
-.Slider-svg{}
-.Slider-ul{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    margin:4rem;
 
-    padding:1rem 0;
-}
-.Slider-li{}
-.Slider-point{
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 50%;
-    border:2px solid grey;
-    padding: .6rem;
-    
-}
-.Slider-point.isActive{
-    background-color: #313c73;
-    border-color:lightseagreen;
-}
+
 
 /*MAPA*/
 
@@ -587,17 +621,51 @@ iframe{
 
 /*responsive*/
 
+/*    modo tablet*/
 
-@media(max-width: 700px){
+@media(max-width: 768px){
+   
+    
+    .Header-button{
+        display: block;
+    }
+     
+    .Header-nav{
+        width: 100%;
+        background-color: #DBDCEF;
+        height: 0;
+        overflow: hidden;
+        
+        transition: all 3s ease;
+        
+       
+    }
+     .Header-nav.isActive{
+        
+         height: 80vh;
+        
+    }
+    .Header-ul{
+        flex-direction: column;
+        padding: 1rem;
+    }
+   
+    .Header-li{
+        border-bottom: 1px solid #4D52AC;
+    }
+    
+    
     .Grid-article , .Tarifas-general{
         grid-template-columns: initial;
     }
-    .Iinicio-intro{
-        top: 6rem;
-        left: 5rem;
-    }
-    .Iinicio-h1{
-        text-align: center;
+    
+   .Inicio-intro {
+        max-width: 90vw; /* Reducimos el ancho para dispositivos móviles y tablets */
+        min-height: 30vh; /* Reducimos la altura para dispositivos móviles y tablets */
+        padding: 0.5rem; /* Ajustamos el espacio interno para dispositivos móviles y tablets */
+        top: 50%; /* Centramos verticalmente utilizando top: 50% */
+        left: 50%; /* Centramos horizontalmente utilizando left: 50% */
+        transform: translate(-50%, -50%); /* Ajuste para centrado exacto */
     }
     
     .Mapa-info{
@@ -609,7 +677,7 @@ iframe{
     }
     
     iframe{
-        max-width: 50vh;
+        max-width: 100%;
     }
     .Consultoria-footer{
        grid-template-columns: auto;
@@ -621,7 +689,7 @@ iframe{
         flex-flow: row nowrap;
         justify-content: flex-start;
         align-items: center;
-        background-color: darkviolet;
+/*        background-color: darkviolet;*/
             
         
     }
@@ -630,13 +698,24 @@ iframe{
     }
 }
 
-@media (max-width: 30rem){
-    .Nav-li{
-        display: none;
+/*modo movil*/
+
+@media (max-width: 480px){
+    
+    .Inicio-intro {
+        max-width: 95vw; /* Reducimos el ancho para dispositivos móviles */
+        min-height: 20vh; /* Reducimos la altura para dispositivos móviles */
+        padding: 0.5rem; /* Ajustamos el espacio interno para dispositivos móviles */
     }
-    
-    .Nav-svg{display: block;}
-    
+
+    .First-p {
+        font-size: 1.1rem; /* Ajustamos el tamaño del texto para dispositivos móviles */
+    }
+
+    .Inicio-h1 {
+        font-size: 2.5rem; /* Ajustamos el tamaño del título para dispositivos móviles */
+    }
+}
     .Opiniones-section{
         position: relative;
     }
@@ -647,7 +726,7 @@ iframe{
         display: block;
         margin: auto;
         left: 0;
-        position: absolute
+        position: absolute;
     }
     
      .Footer-h2{
