--- a/css/index.css
+++ b/css/index.css
@@ -90,7 +90,7 @@ html{
 
 
 .Header-h1{
-    width: 20%;
+    width: 27vw;
 /*    background-color: blue;*/
     padding: 1rem;
 }
@@ -189,19 +189,24 @@ html{
     background-color: white;
     border-radius: 15px;
     
-    position: absolute; /* Mantenemos position: absolute para el modo normal */
-    top: 50%; /* Centramos verticalmente utilizando top: 50% */
-    left: 50%; /* Centramos horizontalmente utilizando left: 50% */
-    transform: translate(-50%, -50%); /* Ajuste para centrado exacto */
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
     text-align: center;
-    padding: 1rem; /* Agregamos un poco de espacio interno */
+    padding: 1rem; 
+}
+
+.Info-Contacto{
+    
+    /* background-color: blueviolet; */
 }
 
 .First-p {
     width: 70vw;
     /* background-color: aquamarine; */
     font-family: var(--font-main);
-    font-size: 1.3rem;
+    font-size: 2.5vw;
     color: var(--color-hs);
     padding: .8rem;
     font-weight: 200;
@@ -213,7 +218,7 @@ html{
     width: 80vw;
     /* background-color: blueviolet; */
     font-family: var(--font-h1);
-    font-size: 3rem;
+    font-size: 5vw;
     font-weight: 800;
     color: var(--color-h1);
     word-spacing: 1rem;
@@ -296,7 +301,7 @@ label , checkbox{
 }
 
 .Formulario-button{
-    width: 20rem;
+    width: 30vw;
     padding: 2rem;
     margin: auto;
     border-radius: .9rem;
@@ -308,6 +313,10 @@ label , checkbox{
     color: var(--color-white);
     font-size: 1rem;
     
+}
+.Formulario-p{
+    font-size: 2vw;
+/*    background-color: aqua;*/
 }
 
 
@@ -413,6 +422,7 @@ label , checkbox{
     grid-template-columns: repeat(3 , 1fr);
     column-gap: 1rem;
     padding: 1rem;
+    font-size: 2vw;
 }
 
 .Tarifa-fija{
@@ -452,54 +462,61 @@ label , checkbox{
 
 .Opiniones-section{
     width: 100%;
+    height: 60vh;
     position: relative;
 /*    background-color: blue;*/
 }
-.Slider-wrapper{
-    max-width: 90%;
-/*    background-color: antiquewhite;*/
-    padding: 2rem;
+.Opiniones-section .Opinion-wrapper{
+    width: 95%;
+    height: 60vh;
+   /* background-color: paleturquoise; */
+    
     text-align: center;
-    margin:  auto;
+    margin: auto;
     
-    
-    
+     
 }
 .Slider-opinion{
+
     width: 50vw;
-   background-color: aquamarine;
+   /* background-color: palevioletred; */
     height: 40vh;
     position: absolute;
     opacity: 0;
-    transition: all 2s ease;
-    margin: 2rem 14rem auto;
+   
     border: 1px solid #c4c4c4;
     padding: 2rem;
     border-radius: .9rem;
-    top: 2.5vw;
+    top: 5vw;
+    left: 25vw;
     
+
     
 }
+
 .Slider-opinion.isActive{
     opacity: 1;
 }
+
+/*
 .Slider-static{
     position: static;
     
 }
+*/
 
 .Nombre-h2{
     font-family: var(--font-h2);
     color: var(--color-h2);
-    font-size: 1.5rem;
-    background-color: cadetblue;
+    font-size: 2vw;
+   /* background-color: cadetblue; */
     
 }
 .Opinion-p{
     font-family: var(--font-nav);
     color: var(--color-hs);
-    font-size: 1.2rem;
-    background-color: brown;
+    font-size: 2vw;
+   /* background-color: brown; */
     
     
 }
@@ -519,6 +536,7 @@ label , checkbox{
 .Slider-prev{
     left: 5%;
 }
+
 
 
 
@@ -655,17 +673,21 @@ iframe{
     }
     
     
-    .Grid-article , .Tarifas-general{
-        grid-template-columns: initial;
-    }
+    
     
    .Inicio-intro {
-        max-width: 90vw; /* Reducimos el ancho para dispositivos móviles y tablets */
-        min-height: 30vh; /* Reducimos la altura para dispositivos móviles y tablets */
-        padding: 0.5rem; /* Ajustamos el espacio interno para dispositivos móviles y tablets */
-        top: 50%; /* Centramos verticalmente utilizando top: 50% */
-        left: 50%; /* Centramos horizontalmente utilizando left: 50% */
-        transform: translate(-50%, -50%); /* Ajuste para centrado exacto */
+        width: 90vw; 
+        height: 28vh; 
+        padding: 1rem; 
+        top: 50%; 
+        left: 50%; 
+        transform: translate(-50%, -50%); 
+    }
+    .Formulario-button{
+        width: 40vw;
+    }
+    .Grid-article , .Tarifas-general{
+        grid-template-columns: initial;
     }
     
     .Mapa-info{
@@ -703,21 +725,34 @@ iframe{
 @media (max-width: 480px){
     
     .Inicio-intro {
-        max-width: 95vw; /* Reducimos el ancho para dispositivos móviles */
-        min-height: 20vh; /* Reducimos la altura para dispositivos móviles */
-        padding: 0.5rem; /* Ajustamos el espacio interno para dispositivos móviles */
+        width: 60vw; 
+        height: 1vh; 
+        padding: .1rem; 
     }
 
     .First-p {
-        font-size: 1.1rem; /* Ajustamos el tamaño del texto para dispositivos móviles */
+        width: 50vw;
+        font-size: 2vw;
+        margin: auto;
     }
 
     .Inicio-h1 {
-        font-size: 2.5rem; /* Ajustamos el tamaño del título para dispositivos móviles */
+        width: 50vw;
+        font-size: 4vw; 
+        margin: auto;
+        word-spacing: 0;
+        /* background-color: coral; */
     }
-}
+    .Formulario-button{
+        width: 40vw;
+        height: 8vh;
+        padding: 0;
+    }
     .Opiniones-section{
         position: relative;
+    }
+    .Grid-article{
+        padding: 1rem;
     }
     
     .Slider-wrapper{
@@ -728,6 +763,10 @@ iframe{
         left: 0;
         position: absolute;
     }
+
+    .Slider-prev , .Slider-arrow , .Slider-next{
+        width: 10vw;
+    }
     
      .Footer-h2{
         max-width: 50vh;
@@ -735,6 +774,7 @@ iframe{
         padding: 1rem;
     }
     .Info-footer{
-       text-align: center
+        font-size: 4vw;
+       text-align: center;
     }
 }
