--- a/css/index.css
+++ b/css/index.css
@@ -300,9 +300,13 @@ label , checkbox{
     background-color: var(--bottom-color);
     font-family: var(--font-main);
     color: var(--color-white);
-    /* font-size: 1rem; */
     font-size: 2vw;
-    
+    transform: scale(1);
+    transition: 1.5s ease all;
+}
+
+.Formulario-button:hover{
+    transform: scale(1.2);
 }
 .Formulario-p{
     
@@ -452,7 +456,7 @@ label , checkbox{
 
 .Opiniones-section{
     width: 100%;
-    height: 60vh;
+    
     position: relative;
 /*    background-color: blue;*/
 }
